build report presente